<resources>
    <string name="app_name">Fitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_id" translatable="false">train_reminder</string>
    <string name="channel_name" translatable="true">Train Reminder</string>
    <string name="channel_description">reminds you to do training</string>
    <string name="training_notification_title">Your body needs to move</string>
    <!--    TODO ganti snooze jadi start training-->
    <string name="snooze">Snooze</string>
    <string name="google_maps_key">AIzaSyA41MIwmzLa8ZGvn7WzDlZsbaEyxy2fzOE</string>
    <string name="kumpulan_berita">List of Indonesian Sport News</string>
    <string name="compass_hands">Compass Hand</string>
    <string name="compass_dial">Compass Dial</string>
    <string name="log_detail">Log Detail</string>
    <string name="training_type">Training Type</string>
    <string name="start_time">Start Time</string>
    <string name="average_km_hour">Average (KM/hour)</string>
    <string name="duration">Duration</string>
    <string name="detail">Detail</string>
    <string name="end_time">End Time</string>
    <string-array name="filter_options">
        <item>Distance</item>
        <item>Average Speed</item>
    </string-array>
</resources>