<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewmodels.fragments.NewsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/log_detail" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="221dp"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/training_type" />

            <TextView
                android:id="@+id/detail_training_type_value"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/start_time" />

            <TextView
                android:id="@+id/detail_start_time_value"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/end_time" />

            <TextView
                android:id="@+id/detail_end_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/detail" />

            <TextView
                android:id="@+id/detail_info"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/detail_duration"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/average_km_hour" />

            <TextView
                android:id="@+id/detail_avg_kmh"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

</FrameLayout>